Alignment fixes
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/QUEBEC-EXPERIMENTAL@3442 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/html/NoAuth/webrt.css
+++ b/html/NoAuth/webrt.css
@@ -374,10 +374,12 @@ span.title {  font-family: Verdana, Arial, Helvetica, sans-serif;
 	 font-size: 11px;
 	 font-weight: bold;
 	 color: #0066CC }
-.value {       font-weight: normal; }
+.value {       font-weight: normal; vertical-align: top; }
 .entry {       font-weight: normal; }
 .label {       font-weight: bold; 
-	       text-align: right; }
+	       text-align: right;
+               vertical-align: top; }
+.value input, .value select { vertical-align: top; }
 .labeltop {       font-weight: normal;
 	       text-align: right;
 	       vertical-align: top }
